--- a/example.html
+++ b/example.html
@@ -10,7 +10,7 @@
     <input id="userIdInput" type="text" placeholder="GitHub user id"><button id="findButton">Find</button>
     <br/>
     <div id="result"></div>
-    <script src="./dist/yapi.min.js"></script>
+    <script src="./lib/yapi.js"></script>
     <script>
       var getJSON = function(url) {
         var promise = YAPI.createPromise(function(resolve, reject){
